--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,19 @@
 ul {
-  color: red;
+  border: 1px solid black;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  font-size: 24px;
+}
+
+ul > li {
+  cursor: pointer;
+}
+
+.active {
+  border-bottom: 2px solid red;
+}
+
+#content {
+  border: 1px solid red;
 }
