--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: #FEF2F2;
+  font-family: 'Roboto', sans-serif;
+}
+
 ul {
-  border: 1px solid black;
+  border-bottom: 3px solid #D6D3D1;
   list-style: none;
   display: flex;
   justify-content: space-evenly;
   font-size: 24px;
+  padding: 20px 0;
+  margin-bottom: 20px;
 }
 
 ul > li {
@@ -11,9 +26,68 @@ ul > li {
 }
 
 .active {
-  border-bottom: 2px solid red;
+  border-bottom: 2px solid #EF4444;
 }
 
 #content {
-  border: 1px solid red;
+  height: 100vh;
+}
+
+.home > h1 {
+  font-size: 30px;
+  margin-bottom: 20px;
+  color: #DC2626;
+}
+
+.home > img {
+  margin-bottom: 20px;
+}
+
+#content > section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+} 
+
+.menu-item {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+  margin-bottom: 20px;
+  background-color: #FCA5A5;
+  border-radius: 5px;
+}
+
+.menu-item > img {
+  width: 300px;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 100%;
+  margin-right: 10px;
+}
+
+.menu-item > div {
+  background-color: #FEF2F2;
+  max-width: 800px;
+  padding: 20px 10px;
+}
+
+.menu-item > div > h3 {
+  font-size: 25px;
+  text-align: center;
+  margin-bottom: 5px;
+  color: #EF4444;
+}
+
+p {
+  font-size: 18px;
+  color: #111827;
+}
+
+.contact > h2 {
+  margin-bottom: 20px;
+}
+
+.contact > img {
+  margin-bottom: 20px;
 }
